@@ -2,9 +2,11 @@ package com.qiaben.ciyex.service;
 
 import com.qiaben.ciyex.dto.integration.RequestContext;
 import com.qiaben.ciyex.entity.*;
+import com.qiaben.ciyex.entity.portal.PortalUser;
 import com.qiaben.ciyex.repository.OrgRepository;
 import com.qiaben.ciyex.repository.UserRepository;
 import com.qiaben.ciyex.repository.UserOrgRoleRepository;
+import com.qiaben.ciyex.repository.portal.PortalUserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -26,36 +28,55 @@ public class CiyexUserDetailsService implements UserDetailsService {
     private OrgRepository orgRepository;
     @Autowired
     private UserOrgRoleRepository userOrgRoleRepository;
+    @Autowired
+    private PortalUserRepository portalUserRepository;
 
-    // Used by Spring Security for login; orgId is OPTIONAL here
+    /**
+     * Used by Spring Security for login (main + portal users).
+     */
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
+        // 1️⃣ Try main system users
+        Optional<User> userOpt = userRepository.findByEmail(email);
+        if (userOpt.isPresent()) {
+            User user = userOpt.get();
 
-        // Get orgId from context if present, else allow login for all orgs
-        RequestContext ctx = RequestContext.get();
-        Long orgId = ctx != null ? ctx.getOrgId() : null;
+            RequestContext ctx = RequestContext.get();
+            Long orgId = (ctx != null) ? ctx.getOrgId() : null;
 
-        Set<UserOrgRole> roles;
-        if (orgId != null) {
-            // If orgId present, filter by org
-            roles = user.getUserOrgRoles().stream()
+            Set<UserOrgRole> roles = (orgId != null)
+                    ? user.getUserOrgRoles().stream()
                     .filter(uor -> uor.getOrg().getId().equals(orgId))
+                    .collect(Collectors.toSet())
+                    : user.getUserOrgRoles();
+
+            Set<GrantedAuthority> authorities = roles.stream()
+                    .map(uor -> new SimpleGrantedAuthority("ROLE_" + uor.getRole().name()))
                     .collect(Collectors.toSet());
-        } else {
-            // If orgId not present (login scenario), get ALL roles for this user
-            roles = user.getUserOrgRoles();
+
+            return new org.springframework.security.core.userdetails.User(
+                    user.getEmail(),
+                    user.getPassword(),
+                    authorities
+            );
         }
 
-        Set<GrantedAuthority> authorities = roles.stream()
-                .map(uor -> new SimpleGrantedAuthority(uor.getRole().name()))
-                .collect(Collectors.toSet());
+        // 2️⃣ Fallback to patient portal users
+        PortalUser portalUser = portalUserRepository.findByEmail(email)
+                .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
 
-        return new org.springframework.security.core.userdetails.User(user.getEmail(), user.getPassword(), authorities);
+        // Always assign ROLE_PATIENT
+        return new org.springframework.security.core.userdetails.User(
+                portalUser.getEmail(),
+                portalUser.getPassword(),
+                List.of(new SimpleGrantedAuthority("ROLE_PATIENT"))
+        );
     }
 
-    // All other service methods: orgId is REQUIRED
+    // ---------------------------
+    // Existing methods unchanged
+    // ---------------------------
+
     public List<User> getAllUsers() {
         Long orgId = getCurrentOrgId();
         final Long finalOrgId = orgId;
@@ -73,8 +94,6 @@ public class CiyexUserDetailsService implements UserDetailsService {
         if (userOpt.isEmpty()) return Optional.empty();
 
         User user = userOpt.get();
-
-        // If orgId is present in context, filter user-org-role
         RequestContext ctx = RequestContext.get();
         Long orgId = (ctx != null) ? ctx.getOrgId() : null;
 
@@ -83,7 +102,7 @@ public class CiyexUserDetailsService implements UserDetailsService {
                     .anyMatch(uor -> uor.getOrg().getId().equals(orgId));
 
             if (!belongsToOrg) {
-                return Optional.empty(); // deny access to user outside org
+                return Optional.empty();
             }
         }
 
@@ -95,27 +114,26 @@ public class CiyexUserDetailsService implements UserDetailsService {
     public User assignUserToOrg(User user, Long orgId, RoleName roleName) {
         if (orgId == null) orgId = getCurrentOrgId();
 
-        final Long finalOrgId = orgId;
-        final RoleName finalRoleName = roleName;
-
-        Org org = orgRepository.findById(finalOrgId)
+        Org org = orgRepository.findById(orgId)
                 .orElseThrow(() -> new RuntimeException("Org not found"));
 
-        User persistedUser = userRepository.findByEmail(user.getEmail()).orElse(userRepository.save(user));
+        User persistedUser = userRepository.findByEmail(user.getEmail())
+                .orElse(userRepository.save(user));
 
+        final Long finalOrgId = orgId;
         boolean alreadyAssigned = userOrgRoleRepository
                 .findByUserId(persistedUser.getId())
                 .stream()
-                .anyMatch(uor -> uor.getOrg().getId().equals(finalOrgId) && uor.getRole() == finalRoleName);
+                .anyMatch(uor -> uor.getOrg().getId().equals(finalOrgId) && uor.getRole() == roleName);
 
         if (alreadyAssigned) {
-            throw new RuntimeException("User is already assigned to this org with the same role.");
+            throw new RuntimeException("User already assigned to this org with same role.");
         }
 
         UserOrgRole uor = UserOrgRole.builder()
                 .user(persistedUser)
                 .org(org)
-                .role(finalRoleName)
+                .role(roleName)
                 .build();
 
         userOrgRoleRepository.save(uor);
@@ -131,12 +149,11 @@ public class CiyexUserDetailsService implements UserDetailsService {
 
     public User updateUserByEmail(String email, User userDetails) {
         Long orgId = getCurrentOrgId();
-        final Long finalOrgId = orgId;
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
         boolean hasOrg = user.getUserOrgRoles().stream()
-                .anyMatch(uor -> uor.getOrg().getId().equals(finalOrgId));
+                .anyMatch(uor -> uor.getOrg().getId().equals(orgId));
         if (!hasOrg) throw new RuntimeException("User not in this org");
 
         user.setFirstName(userDetails.getFirstName());
@@ -163,19 +180,15 @@ public class CiyexUserDetailsService implements UserDetailsService {
     @Transactional
     public void deleteUserByEmail(String email) {
         Long orgId = getCurrentOrgId();
-        final Long finalOrgId = orgId;
         Optional<User> userOpt = userRepository.findByEmail(email)
                 .filter(u -> u.getUserOrgRoles().stream()
-                        .anyMatch(uor -> uor.getOrg().getId().equals(finalOrgId)));
+                        .anyMatch(uor -> uor.getOrg().getId().equals(orgId)));
         userOpt.ifPresent(userRepository::delete);
     }
 
     @Transactional
     public void removeUserFromOrg(String email, Long orgId, RoleName roleName) {
-        if (orgId == null) orgId = getCurrentOrgId();
-
-        final Long finalOrgId = orgId;
-        final RoleName finalRoleName = roleName;
+        final Long finalOrgId = (orgId == null) ? getCurrentOrgId() : orgId;
 
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("User not found"));
@@ -183,14 +196,14 @@ public class CiyexUserDetailsService implements UserDetailsService {
                 .orElseThrow(() -> new RuntimeException("Org not found"));
 
         List<UserOrgRole> assignments = userOrgRoleRepository.findByUserId(user.getId()).stream()
-                .filter(uor -> uor.getOrg().getId().equals(finalOrgId) && uor.getRole() == finalRoleName)
-                .collect(Collectors.toList());
+                .filter(uor -> uor.getOrg().getId().equals(finalOrgId) && uor.getRole() == roleName)
+                .toList();
         assignments.forEach(uor -> userOrgRoleRepository.deleteById(uor.getId()));
 
         user.getUserOrgRoles().removeIf(
-                uor -> uor.getOrg().getId().equals(finalOrgId) && uor.getRole() == finalRoleName);
+                uor -> uor.getOrg().getId().equals(finalOrgId) && uor.getRole() == roleName);
         org.getUserOrgRoles().removeIf(
-                uor -> uor.getUser().getId().equals(user.getId()) && uor.getRole() == finalRoleName);
+                uor -> uor.getUser().getId().equals(user.getId()) && uor.getRole() == roleName);
 
         userRepository.save(user);
         orgRepository.save(org);
@@ -198,11 +211,10 @@ public class CiyexUserDetailsService implements UserDetailsService {
 
     public List<UserOrgRole> getOrgRolesForUser(String email) {
         Long orgId = getCurrentOrgId();
-        final Long finalOrgId = orgId;
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found"));
         return user.getUserOrgRoles().stream()
-                .filter(uor -> uor.getOrg().getId().equals(finalOrgId))
+                .filter(uor -> uor.getOrg().getId().equals(orgId))
                 .collect(Collectors.toList());
     }
 
